// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ee_component/projects/pipelines/charts/components/deployment_frequency_charts.vue when there are no network errors converts the data from the API into data usable by the chart component 1`] = `
Array [
  Array [
    "Jun 26",
    0,
  ],
  Array [
    "Jun 27",
    0,
  ],
  Array [
    "Jun 28",
    0,
  ],
  Array [
    "Jun 29",
    0,
  ],
  Array [
    "Jun 30",
    3,
  ],
  Array [
    "Jul 1",
    1,
  ],
  Array [
    "Jul 2",
    0,
  ],
  Array [
    "Jul 3",
    1,
  ],
  Array [
    "Jul 4",
    0,
  ],
]
`;

exports[`ee_component/projects/pipelines/charts/components/deployment_frequency_charts.vue when there are no network errors converts the data from the API into data usable by the chart component 2`] = `
Array [
  Array [
    "Jun 3",
    0,
  ],
  Array [
    "Jun 4",
    0,
  ],
  Array [
    "Jun 5",
    0,
  ],
  Array [
    "Jun 6",
    0,
  ],
  Array [
    "Jun 7",
    0,
  ],
  Array [
    "Jun 8",
    0,
  ],
  Array [
    "Jun 9",
    0,
  ],
  Array [
    "Jun 10",
    0,
  ],
  Array [
    "Jun 11",
    0,
  ],
  Array [
    "Jun 12",
    0,
  ],
  Array [
    "Jun 13",
    0,
  ],
  Array [
    "Jun 14",
    0,
  ],
  Array [
    "Jun 15",
    0,
  ],
  Array [
    "Jun 16",
    0,
  ],
  Array [
    "Jun 17",
    0,
  ],
  Array [
    "Jun 18",
    0,
  ],
  Array [
    "Jun 19",
    0,
  ],
  Array [
    "Jun 20",
    0,
  ],
  Array [
    "Jun 21",
    0,
  ],
  Array [
    "Jun 22",
    0,
  ],
  Array [
    "Jun 23",
    0,
  ],
  Array [
    "Jun 24",
    0,
  ],
  Array [
    "Jun 25",
    1,
  ],
  Array [
    "Jun 26",
    0,
  ],
  Array [
    "Jun 27",
    0,
  ],
  Array [
    "Jun 28",
    0,
  ],
  Array [
    "Jun 29",
    0,
  ],
  Array [
    "Jun 30",
    3,
  ],
  Array [
    "Jul 1",
    1,
  ],
  Array [
    "Jul 2",
    0,
  ],
  Array [
    "Jul 3",
    1,
  ],
  Array [
    "Jul 4",
    0,
  ],
]
`;

exports[`ee_component/projects/pipelines/charts/components/deployment_frequency_charts.vue when there are no network errors converts the data from the API into data usable by the chart component 3`] = `
Array [
  Array [
    "Apr 4",
    0,
  ],
  Array [
    "Apr 5",
    0,
  ],
  Array [
    "Apr 6",
    0,
  ],
  Array [
    "Apr 7",
    0,
  ],
  Array [
    "Apr 8",
    0,
  ],
  Array [
    "Apr 9",
    0,
  ],
  Array [
    "Apr 10",
    0,
  ],
  Array [
    "Apr 11",
    0,
  ],
  Array [
    "Apr 12",
    0,
  ],
  Array [
    "Apr 13",
    0,
  ],
  Array [
    "Apr 14",
    0,
  ],
  Array [
    "Apr 15",
    0,
  ],
  Array [
    "Apr 16",
    0,
  ],
  Array [
    "Apr 17",
    0,
  ],
  Array [
    "Apr 18",
    0,
  ],
  Array [
    "Apr 19",
    0,
  ],
  Array [
    "Apr 20",
    0,
  ],
  Array [
    "Apr 21",
    0,
  ],
  Array [
    "Apr 22",
    0,
  ],
  Array [
    "Apr 23",
    0,
  ],
  Array [
    "Apr 24",
    0,
  ],
  Array [
    "Apr 25",
    0,
  ],
  Array [
    "Apr 26",
    0,
  ],
  Array [
    "Apr 27",
    0,
  ],
  Array [
    "Apr 28",
    0,
  ],
  Array [
    "Apr 29",
    0,
  ],
  Array [
    "Apr 30",
    0,
  ],
  Array [
    "May 1",
    0,
  ],
  Array [
    "May 2",
    0,
  ],
  Array [
    "May 3",
    0,
  ],
  Array [
    "May 4",
    0,
  ],
  Array [
    "May 5",
    0,
  ],
  Array [
    "May 6",
    0,
  ],
  Array [
    "May 7",
    0,
  ],
  Array [
    "May 8",
    0,
  ],
  Array [
    "May 9",
    0,
  ],
  Array [
    "May 10",
    0,
  ],
  Array [
    "May 11",
    0,
  ],
  Array [
    "May 12",
    0,
  ],
  Array [
    "May 13",
    0,
  ],
  Array [
    "May 14",
    0,
  ],
  Array [
    "May 15",
    0,
  ],
  Array [
    "May 16",
    0,
  ],
  Array [
    "May 17",
    0,
  ],
  Array [
    "May 18",
    0,
  ],
  Array [
    "May 19",
    0,
  ],
  Array [
    "May 20",
    0,
  ],
  Array [
    "May 21",
    0,
  ],
  Array [
    "May 22",
    0,
  ],
  Array [
    "May 23",
    0,
  ],
  Array [
    "May 24",
    0,
  ],
  Array [
    "May 25",
    0,
  ],
  Array [
    "May 26",
    0,
  ],
  Array [
    "May 27",
    0,
  ],
  Array [
    "May 28",
    0,
  ],
  Array [
    "May 29",
    0,
  ],
  Array [
    "May 30",
    0,
  ],
  Array [
    "May 31",
    0,
  ],
  Array [
    "Jun 1",
    1,
  ],
  Array [
    "Jun 2",
    0,
  ],
  Array [
    "Jun 3",
    0,
  ],
  Array [
    "Jun 4",
    0,
  ],
  Array [
    "Jun 5",
    0,
  ],
  Array [
    "Jun 6",
    0,
  ],
  Array [
    "Jun 7",
    0,
  ],
  Array [
    "Jun 8",
    0,
  ],
  Array [
    "Jun 9",
    0,
  ],
  Array [
    "Jun 10",
    0,
  ],
  Array [
    "Jun 11",
    0,
  ],
  Array [
    "Jun 12",
    0,
  ],
  Array [
    "Jun 13",
    0,
  ],
  Array [
    "Jun 14",
    0,
  ],
  Array [
    "Jun 15",
    0,
  ],
  Array [
    "Jun 16",
    0,
  ],
  Array [
    "Jun 17",
    0,
  ],
  Array [
    "Jun 18",
    0,
  ],
  Array [
    "Jun 19",
    0,
  ],
  Array [
    "Jun 20",
    0,
  ],
  Array [
    "Jun 21",
    0,
  ],
  Array [
    "Jun 22",
    0,
  ],
  Array [
    "Jun 23",
    0,
  ],
  Array [
    "Jun 24",
    0,
  ],
  Array [
    "Jun 25",
    1,
  ],
  Array [
    "Jun 26",
    0,
  ],
  Array [
    "Jun 27",
    0,
  ],
  Array [
    "Jun 28",
    0,
  ],
  Array [
    "Jun 29",
    0,
  ],
  Array [
    "Jun 30",
    3,
  ],
  Array [
    "Jul 1",
    1,
  ],
  Array [
    "Jul 2",
    0,
  ],
  Array [
    "Jul 3",
    1,
  ],
  Array [
    "Jul 4",
    0,
  ],
]
`;
